--- a/src/main/resources/email/mail-template-actualizar-token.html
+++ b/src/main/resources/email/mail-template-actualizar-token.html
@@ -11,16 +11,8 @@
             padding: 20px; border-radius: 8px;">
         <h1 style="text-align: center; color: #066ec8; font-weight: 600;">Superintendencia Nacional de Servicios de Saneamiento - SUNASS</h1>
         <h1 style="font-size: 20px;">Estimado(a) [[${fullname}]],</h1>
-        <p>Le informamos que se han generado sus credenciales de acceso para el sistema VMA.</p>
-        <p>Su usuario es: <strong>[[${username}]]</strong></p>
-        <p>Su clave es: <strong>[[${password}]]</strong></p>
-        <p>
-        	Por motivos de seguridad, le solicitamos que cambie su contraseña antes de ingresar al sistema. 
-        	Puede realizar este cambio de forma rápida y segura dando click a este <a href="[[${changePasswordLink}]]" style="color: #007BFF;">enlace</a>, donde encontrará un formulario para actualizar su contraseña.
-         </p>
+        <p>Para poder cambiar su contraseña debe dar click en este  <a href="[[${changePasswordLink}]]" style="color: #007BFF;">enlace</a></p>
         
         <p style="font-style: italic;">Si tiene alguna consulta o necesita asistencia, no dude en ponerse en contacto con nuestro equipo de mesa de ayuda: <a href="mailto:mesadeayuda@sunass.gob.pe" style="color: #007BFF; text-decoration: none;">mesadeayuda@sunass.gob.pe</a></p>
-    </body>
-</html>
     </body>
 </html>
