--- a/src/main/resources/email/mail-template.html
+++ b/src/main/resources/email/mail-template.html
@@ -15,12 +15,11 @@
         <p>Su usuario es: <strong>[[${username}]]</strong></p>
         <p>Su clave es: <strong>[[${password}]]</strong></p>
         <p>
-        	Por motivos de seguridad, le solicitamos que cambie su contraseña antes de ingresar al sistema. 
-        	Puede realizar este cambio de forma rápida y segura dando click a este <a href="[[${changePasswordLink}]]" style="color: #007BFF;">enlace</a>, donde encontrará un formulario para actualizar su contraseña.
+        	Por motivos de seguridad, usted debe cambiar su contraseña antes de iniciar sesion en el sistema VMA. 
+        	Puede realizarlo  de forma rápida y segura dando click a este <a href="[[${changePasswordLink}]]" style="color: #007BFF;">enlace</a>, donde encontrará un formulario para actualizar su contraseña.
          </p>
         
-        <p style="font-style: italic;">Si tiene alguna consulta o necesita asistencia, no dude en ponerse en contacto con nuestro equipo de mesa de ayuda: <a href="mailto:mesadeayuda@sunass.gob.pe" style="color: #007BFF; text-decoration: none;">mesadeayuda@sunass.gob.pe</a></p>
+        <p style="font-style: italic;">Si tiene alguna consulta o necesita asistencia, no dude en ponerse en contacto con nuestro equipo de soporte técnico.</p>
     </body>
 </html>
-    </body>
-</html>
+ 
