fix en emailservice, correo properties y template

--- a/src/main/resources/email/mail-template.html
+++ b/src/main/resources/email/mail-template.html
@@ -39,7 +39,7 @@
             Para consultar y verificar su registro, puede acceder al sistema mediante el siguiente enlace: <a href="https://apps.sunass.gob.pe/vma/#/login">https://apps.sunass.gob.pe/vma/#/login</a>
         </p>
         <p>
-            Tenga en cuenta que posteriormente podrá acceder a su registro en modo de lectura. Esto significa que no será posible editar los datos ya registrados.
+            Tenga en cuenta que posteriormente podrá acceder a su registro en modo de lectura. Esto significa que no será posible editar los datos registrados.
         </p>
         <br>
         <p class="italic">
